// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avon Theme it should match Avon Dark theme snapshot: Avon Dark Theme 1`] = `
Object {
  "asset": Object {
    "brand": Object {
      "custom": Object {
        "a": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.9 28.9 0 0 1-20.365 8.273 28.573 28.573 0 0 1-20.415-8.295 28.417 28.417 0 0 1-6.22-31.107 28.418 28.418 0 0 1 6.22-9.249C144.665 2.805 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0-6.844 34.284 17.851 17.851 0 0 0 17.831-17.805z\\" fill=\\"#000\\"/></svg>",
          "height": 58,
          "width": 256,
        },
        "b": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.9 28.9 0 0 1-20.365 8.273 28.573 28.573 0 0 1-20.415-8.295 28.417 28.417 0 0 1-6.22-31.107 28.418 28.418 0 0 1 6.22-9.249C144.665 2.805 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0-6.844 34.284 17.851 17.851 0 0 0 17.831-17.805z\\" fill=\\"#000\\"/></svg>",
          "height": 58,
          "width": 256,
        },
      },
      "neutral": Object {
        "a": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.9 28.9 0 0 1-20.365 8.273 28.573 28.573 0 0 1-20.415-8.295 28.417 28.417 0 0 1-6.22-31.107 28.418 28.418 0 0 1 6.22-9.249C144.665 2.805 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0-6.844 34.284 17.851 17.851 0 0 0 17.831-17.805z\\" fill=\\"#fff\\"/></svg>",
          "height": 58,
          "width": 256,
        },
        "b": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.9 28.9 0 0 1-20.365 8.273 28.573 28.573 0 0 1-20.415-8.295 28.417 28.417 0 0 1-6.22-31.107 28.418 28.418 0 0 1 6.22-9.249C144.665 2.805 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0-6.844 34.284 17.851 17.851 0 0 0 17.831-17.805z\\" fill=\\"#fff\\"/></svg>",
          "height": 58,
          "width": 256,
        },
      },
    },
    "font": Object {
      "file": Object {
        "body": Object {
          "bold": "Montserrat-Bold",
          "regular": "Montserrat-Regular",
        },
        "display": "Montserrat-Bold",
        "headline": "Montserrat-SemiBold",
      },
    },
  },
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "buttonSizes": Object {
    "large": Object {
      "height": 48,
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
    },
    "medium": Object {
      "height": 40,
      "paddingBottom": 0,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 0,
    },
    "small": Object {
      "height": 32,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
    },
  },
  "color": Object {
    "alert": "#e74627",
    "background": "#121212",
    "highEmphasis": "#fafafa",
    "highlight": "#ffffff",
    "link": "#227bbd",
    "lowEmphasis": "#777777",
    "mediumEmphasis": "#bbbbbb",
    "neutral100": "#343a40",
    "neutral200": "#495057",
    "neutral300": "#868e96",
    "neutral400": "#adb5bd",
    "neutral50": "#212529",
    "neutral500": "#ced4da",
    "neutral600": "#dee2e6",
    "neutral700": "#e9ecef",
    "neutral800": "#f1f3f5",
    "neutral900": "#f8f9fa",
    "onAlert": "#ffffff",
    "onBackground": "#ffffff",
    "onLink": "#ffffff",
    "onPrimary": "#000000",
    "onPrimaryDark": "#000000",
    "onPrimaryDarkest": "#000000",
    "onPrimaryLight": "#000000",
    "onPrimaryLightest": "#000000",
    "onSecondary": "#000000",
    "onSecondaryDark": "#000000",
    "onSecondaryLight": "#000000",
    "onSuccess": "#ffffff",
    "onSurface": "#ffffff",
    "onWarning": "#333333",
    "primary": "#be9ae2",
    "primaryDark": "#8d6bb0",
    "primaryDarkest": "#9672D6",
    "primaryLight": "#f1cbff",
    "primaryLightest": "#442184",
    "secondary": "#f593c4",
    "secondaryDark": "#c16394",
    "secondaryLight": "#ffc5f7",
    "success": "#569a32",
    "surface": "#333333",
    "warning": "#fcc433",
  },
  "iconSizes": Object {
    "huge": 144,
    "hugeX": 192,
    "hugeXX": 256,
    "hugex": 192,
    "hugexx": 256,
    "large": 72,
    "largeX": 96,
    "largeXX": 128,
    "largex": 96,
    "largexx": 128,
    "medium": 64,
    "micro": 16,
    "small": 32,
    "standard": 48,
    "tiny": 24,
  },
  "opacity": Object {
    "00": 0,
    "04": 0.04,
    "08": 0.08,
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "80": 0.8,
    "disabled": 0.32,
    "disabledLow": 0.24,
    "high": 0.64,
    "low": 0.12,
    "lower": 0.04,
    "medium": 0.48,
    "mediumHigh": 0.56,
    "mediumLow": 0.16,
    "opaque": 1,
    "transparent": 0,
    "veryHigh": 0.8,
    "veryLow": 0.08,
  },
  "overrides": Object {
    "MuiAlert": Object {
      "filledInfo": Object {
        "backgroundColor": "#227bbd",
      },
      "filledWarning": Object {
        "backgroundColor": "#fcc433",
        "color": "#333333",
      },
      "icon": Object {
        "marginRight": 8,
      },
      "message": Object {
        "padding": "5px 0",
      },
      "outlinedError": Object {
        "color": "#fafafa",
      },
      "outlinedInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "borderColor": "#227bbd",
        "color": "#fafafa",
      },
      "outlinedSuccess": Object {
        "color": "#fafafa",
      },
      "outlinedWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "borderColor": "#fcc433",
        "color": "#fafafa",
      },
      "root": Object {
        "fontSize": 16,
        "fontWeight": 400,
        "letterSpacing": 0.51,
        "padding": 16,
        "width": 278,
      },
      "standardError": Object {
        "backgroundColor": "rgba(231, 70, 39, 0.16)",
        "color": "#fafafa",
      },
      "standardInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "backgroundColor": "rgba(34, 123, 189, 0.16)",
        "color": "#fafafa",
      },
      "standardSuccess": Object {
        "backgroundColor": "rgba(86, 154, 50, 0.16)",
        "color": "#fafafa",
      },
      "standardWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "backgroundColor": "rgba(252, 196, 51, 0.16)",
        "color": "#fafafa",
      },
    },
    "MuiAlertTitle": Object {
      "root": Object {
        "fontSize": 20,
        "fontWeight": 500,
        "letterSpacing": 0.24,
      },
    },
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#fafafa",
      },
    },
    "MuiBadge": Object {
      "badge": Object {
        "padding": "0 4px",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&.Mui-disabled": Object {
          "backgroundColor": "#ffffff14",
          "color": "#ffffff3D",
        },
      },
      "outlined": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#ffffff3D",
          "color": "#ffffff3D",
        },
        "borderColor": "#ffffff3D",
        "padding": null,
      },
      "outlinedPrimary": Object {
        "color": "#fafafa",
      },
      "outlinedSecondary": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#ffffff3D",
        },
        "color": "#fafafa",
      },
      "root": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 40,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
      },
      "sizeLarge": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 48,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
      },
      "sizeSmall": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 32,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      "text": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#ffffff3D",
          "color": "#ffffff3D",
        },
        "padding": null,
      },
    },
    "MuiButtonGroup": Object {
      "groupedContainedHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderRightColor": "#ffffff1F",
        },
      },
      "groupedContainedPrimary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderColor": "#8d6bb0",
        },
      },
      "groupedContainedSecondary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderColor": "#c16394",
        },
      },
      "groupedOutlinedHorizontal": Object {
        "&:not(:first-child)": Object {
          "marginLeft": "none",
        },
      },
      "groupedTextHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#ffffff3D",
          },
          "borderRightColor": "#ffffff1F",
        },
      },
      "groupedTextPrimary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#ffffff3D",
        },
      },
      "groupedTextSecondary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#ffffff3D",
        },
      },
    },
    "MuiChip": Object {
      "clickable": Object {
        "&:focus": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.16)",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.16)",
        },
      },
      "clickableColorPrimary": Object {
        "&:hover": Object {
          "backgroundColor": "#8d6bb0",
        },
      },
      "clickableColorSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "#8d6bb0",
        },
      },
      "deleteIcon": Object {
        "&:hover": Object {
          "color": "rgba(255, 255, 255, 0.6)",
        },
        "color": "rgba(255, 255, 255, 0.8)",
        "fontSize": "24px",
        "height": "24px",
        "width": "24px",
      },
      "deleteIconColorPrimary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconColorSecondary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "width": "16px",
      },
      "icon": Object {
        "fontSize": "24px",
      },
      "iconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "marginTop": "1px",
        "width": "16px",
      },
      "outlined": Object {
        "borderColor": "rgba(255, 255, 255, 0.12)",
        "color": "#ffffff",
      },
      "outlinedPrimary": Object {
        "& $avatar": Object {
          "backgroundColor": "#be9ae2",
        },
        "color": "#ffffff",
      },
      "outlinedSecondary": Object {
        "& $avatar": Object {
          "backgroundColor": "#f593c4",
        },
        "color": "#ffffff",
      },
      "root": Object {
        "& $avatar": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.24)",
          "color": "#ffffff",
        },
        "&$disabled": Object {
          "opacity": 0.4,
        },
        "backgroundColor": "rgba(255, 255, 255, 0.12)",
        "color": "#ffffff",
        "fontSize": 14,
      },
    },
    "MuiExpansionPanel": Object {
      "root": Object {
        "&$disabled": Object {
          "backgroundColor": "#333333",
          "opacity": 0.32,
        },
        "&$expanded": Object {
          "borderColor": "#be9ae2",
        },
        "border": "transparent 1px solid",
      },
    },
    "MuiExpansionPanelSummary": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 1,
        },
        "alignItems": "flex-start",
        "marginTop": "8px",
      },
    },
    "MuiFormHelperText": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#bbbbbb",
        },
      },
    },
    "MuiFormLabel": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#fafafa",
        },
        "&.Mui-focused": Object {
          "color": "#bbbbbb",
          "fontSize": 14,
        },
        "fontSize": 14,
      },
    },
    "MuiIconButton": Object {
      "root": Object {
        "color": "#fafafa",
        "padding": "8px",
      },
      "sizeSmall": Object {
        "padding": "4px",
      },
    },
    "MuiInputAdornment": Object {
      "positionEnd": Object {
        "marginRight": 8,
      },
      "root": Object {
        "position": "absolute",
        "right": "0",
      },
    },
    "MuiInputBase": Object {
      "adornedEnd": Object {
        "paddingRight": 48,
      },
      "input": Object {
        "&.Mui-disabled:not(::placeholder)": Object {
          "opacity": 0.24,
        },
        "&.MuiInput-inputTypeSearch": Object {
          "paddingRight": 64,
        },
        "&::placeholder": Object {
          "color": "#bbbbbb",
        },
        "border": 0,
        "boxSizing": "border-box",
        "lineHeight": "24px",
        "minHeight": 56,
        "padding": 16,
      },
      "inputMultiline": Object {
        "padding": 16,
      },
      "inputTypeSearch": Object {
        "&::-webkit-search-decoration, &::-webkit-search-cancel-button, &::-webkit-search-results-button, &::-webkit-search-results-decoration": Object {
          "display": "none",
        },
      },
      "root": Object {
        "&.Mui-focused": Object {
          "boxShadow": "#be9ae2 0 0 0 2px",
        },
        "&.MuiFilled:not(.Mui-focused)": Object {
          "&:hover": Object {
            "boxShadow": "#bbbbbb 0 0 0 1px",
          },
          "boxShadow": "#fafafa 0 0 0 1px",
        },
        "&.MuiInput-underline.Mui-disabled:before": Object {
          "borderBottomStyle": "none",
        },
        "&.MuiInput-underline:after": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:before": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
          "borderBottom": "none",
        },
        "&.MuiInputBase-multiline": Object {
          "padding": 0,
        },
        "&:hover": Object {
          "&.Mui-disabled": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#bbbbbb 0 0 0 1px",
        },
        "&[data-state='error']": Object {
          "boxShadow": "#e74627 0 0 0 1px",
        },
        "&[data-state='success']": Object {
          "boxShadow": "#569a32 0 0 0 1px",
        },
        "borderRadius": "4px",
        "boxShadow": "#777777 0 0 0 1px",
        "color": "#fafafa",
        "fontSize": 14,
        "width": "100%",
      },
    },
    "MuiInputLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "position": "relative",
        "transform": "none",
      },
      "shrink": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
    },
    "MuiListItem": Object {
      "button": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.04)",
        },
      },
      "gutters": Object {
        "&:focus": Object {
          "outline": "none",
        },
      },
      "root": Object {
        "&$selected": Object {
          "&:focus": Object {
            "outline": "none",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "background": "rgba(190, 154, 226, 0.16)",
        },
        "&.Mui-disabled": Object {
          "opacity": 0.32,
        },
        "&:hover": Object {
          "backgroundColor": "rgba(250, 250, 250, 0.16)",
        },
        "cursor": "pointer",
      },
    },
    "MuiSelect": Object {
      "icon": Object {
        "color": "#fafafa",
        "top": 4,
      },
      "select": Object {
        "&.Mui-disabled": Object {
          "color": "#777777",
        },
        "&:focus": Object {
          "backgroundColor": "transparent",
        },
      },
    },
    "MuiSvgIcon": Object {
      "root": Object {
        "fill": "#bbbbbb",
      },
    },
    "MuiTab": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "textColorInherit": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "wrapper": Object {
        "& > *:first-child": Object {
          "marginBottom": "2px !important",
        },
      },
    },
    "MuiTablePagination": Object {
      "input": Object {
        "flexShrink": "initial",
      },
      "root": Object {
        "& .MuiSelect-icon": Object {
          "height": "100%",
          "top": 0,
        },
        "overflow": "visible",
      },
    },
    "MuiTableSortLabel": Object {
      "icon": Object {
        "marginLeft": 8,
      },
    },
    "MuiTextField": Object {
      "& .MuiInputLabel": Object {
        "marginTop": "20px",
      },
    },
    "MuiToolbar": Object {
      "dense": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "gutters": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
      "regular": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "root": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "active": "rgba(255, 255, 255, 0.56)",
      "disabled": "rgba(0, 0, 0, 0.24)",
    },
    "background": Object {
      "default": "#121212",
      "defaultContrastText": "#ffffff",
      "paper": "#333333",
      "paperContrastText": "#ffffff",
    },
    "complementary": Object {
      "highlight": "#ffffff",
      "link": "#227bbd",
      "linkContrastText": "#ffffff",
      "warning": "#fcc433",
      "warningContrastText": "#000000",
    },
    "divider": "#777777",
    "error": Object {
      "contrastText": "#ffffff",
      "main": "#e74627",
    },
    "primary": Object {
      "contrastText": "#000000",
      "dark": "#8d6bb0",
      "light": "#f1cbff",
      "main": "#be9ae2",
    },
    "secondary": Object {
      "contrastText": "#000000",
      "dark": "#c16394",
      "light": "#ffc5f7",
      "main": "#f593c4",
    },
    "success": Object {
      "contrastText": "#ffffff",
      "main": "#569a32",
    },
    "text": Object {
      "disabled": "#777777",
      "hint": "#777777",
      "primary": "#fafafa",
      "secondary": "#bbbbbb",
    },
  },
  "shadows": Object {
    "0": "none",
    "1": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "12": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "16": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "2": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
    "24": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "3": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "4": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "6": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "8": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "9": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "huge": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "hugeX": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "hugeXX": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "large": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeX": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeXX": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "medium": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "micro": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "none": "none",
    "small": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "tiny": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "sizes": Object {
    "huge": 96,
    "hugeX": 128,
    "hugeXX": 144,
    "hugeXXX": 192,
    "hugex": 128,
    "hugexx": 144,
    "hugexxx": 192,
    "large": 64,
    "largeX": 72,
    "largeXX": 80,
    "largeXXX": 88,
    "largex": 72,
    "largexx": 80,
    "largexxx": 88,
    "medium": 48,
    "mediumX": 56,
    "mediumx": 56,
    "micro": 4,
    "none": 0,
    "semi": 32,
    "semiX": 40,
    "semix": 40,
    "small": 16,
    "standard": 24,
    "tiny": 8,
    "veryHuge": 256,
    "veryhuge": 256,
  },
  "spacing": 8,
  "typography": Object {
    "body": Object {
      "bold": Object {
        "fontFamily": "\\"Suisse Int'l\\", Arial ",
        "fontWeight": 700,
      },
      "regular": Object {
        "fontFamily": "\\"Suisse Int'l\\", Arial ",
        "fontWeight": 400,
      },
    },
    "body1": Object {
      "fontSize": 16,
      "fontWeight": 400,
      "letterSpacing": 0.51,
    },
    "body2": Object {
      "fontSize": 14,
      "fontWeight": 400,
      "letterSpacing": 0.22,
    },
    "button": Object {
      "fallback": Object {
        "fontFamily": "Arial",
        "fontWeight": 400,
      },
      "fontSize": 14,
      "letterSpacing": 1.23,
      "lineHeight": 1.5,
      "primary": Object {
        "fontFamily": "Roboto",
        "fontWeight": 400,
      },
    },
    "caption": Object {
      "fontSize": 12,
      "fontWeight": 400,
      "letterSpacing": 0.38,
    },
    "display": Object {
      "fontFamily": "\\"Zapf Humanist 601\\", Arial ",
      "fontWeight": 400,
    },
    "fontFamily": "\\"Roboto\\", sans-serif",
    "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
    "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
    "fontFamilyBrand3": null,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "fontSize": 96,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h2": Object {
      "fontSize": 60,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h3": Object {
      "fontSize": 48,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h4": Object {
      "fontSize": 34,
      "fontWeight": 400,
      "letterSpacing": 0.27,
    },
    "h5": Object {
      "fontSize": 24,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h6": Object {
      "fontSize": 20,
      "fontWeight": 500,
      "letterSpacing": 0.24,
    },
    "headline": Object {
      "fontFamily": "\\"Suisse Int'l\\", Arial ",
      "fontWeight": 400,
    },
    "overline": Object {
      "fontSize": 12,
      "fontWeight": 500,
      "letterSpacing": 1.92,
    },
    "subtitle1": Object {
      "fontSize": 16,
      "fontWeight": 500,
      "letterSpacing": 0.13,
    },
    "subtitle2": Object {
      "fontSize": 14,
      "fontWeight": 500,
      "letterSpacing": 0.11,
    },
  },
}
`;

exports[`Avon Theme it should match Avon Light theme snapshot: Avon Light Theme 1`] = `
Object {
  "asset": Object {
    "brand": Object {
      "custom": Object {
        "a": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.9 28.9 0 0 1-20.365 8.273 28.573 28.573 0 0 1-20.415-8.295 28.417 28.417 0 0 1-6.22-31.107 28.418 28.418 0 0 1 6.22-9.249C144.665 2.805 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0-6.844 34.284 17.851 17.851 0 0 0 17.831-17.805z\\" fill=\\"#000\\"/></svg>",
          "height": 58,
          "width": 256,
        },
        "b": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.9 28.9 0 0 1-20.365 8.273 28.573 28.573 0 0 1-20.415-8.295 28.417 28.417 0 0 1-6.22-31.107 28.418 28.418 0 0 1 6.22-9.249C144.665 2.805 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0-6.844 34.284 17.851 17.851 0 0 0 17.831-17.805z\\" fill=\\"#000\\"/></svg>",
          "height": 58,
          "width": 256,
        },
      },
      "neutral": Object {
        "a": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.899 28.899 0 0 1-20.365 8.273 28.458 28.458 0 0 1-20.415-48.65C144.665 2.803 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0 10.987 16.479z\\" fill=\\"url(#a)\\"/><defs><pattern id=\\"a\\" patternContentUnits=\\"objectBoundingBox\\" width=\\"1\\" height=\\"1\\"><use xlink:href=\\"#b\\" transform=\\"matrix(.00405 0 0 .01786 -.022 0)\\"/></pattern><image id=\\"b\\" width=\\"258\\" height=\\"56\\" xlink:href=\\"https://cdn.jsdelivr.net/npm/@naturacosmeticos/natds-themes@latest/dist/assets/avon-a-official-embed-image-0.png\\"/></defs></svg>",
          "height": 58,
          "width": 256,
        },
        "b": Object {
          "file": "<svg width=\\"256\\" height=\\"58\\" viewBox=\\"0 0 256 58\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\"><path d=\\"M88.189 55.36 62.224 1.085h7.058a8.304 8.304 0 0 1 7.519 4.786l14.273 30.408L105.235 5.87a8.303 8.303 0 0 1 7.527-4.786h7.112L93.924 55.36h-5.735zM24.384 30.639a50.804 50.804 0 0 1 12.255 4.005l-7.071-14.901-5.184 10.896zm34.792 24.723H46.691C38.743 44.659 29.91 40.97 19.963 39.737l-5.6 10.837c-1.905 3.161-4.686 4.764-7.906 4.764H0L26.642 1.08h5.838l26.696 54.282zM250.807 1.084a5.713 5.713 0 0 0-5.712 5.716l.031 28.634-28.343-34.35h-8.409V55.36h5.211a5.71 5.71 0 0 0 5.712-5.717l-.031-28.574 23.219 28.253s4.548 6.038 11.19 6.038H256V1.084h-5.193zm-62.229 27.274a27.591 27.591 0 0 1-8.534 20.125 28.899 28.899 0 0 1-20.365 8.273 28.458 28.458 0 0 1-20.415-48.65C144.665 2.803 151.722 0 159.679 0c7.957 0 15.073 2.804 20.41 8.128a28.077 28.077 0 0 1 8.489 20.23zm-11.068 0a17.817 17.817 0 0 0-10.987-16.479 17.822 17.822 0 1 0 10.987 16.479z\\" fill=\\"url(#a)\\"/><defs><pattern id=\\"a\\" patternContentUnits=\\"objectBoundingBox\\" width=\\"1\\" height=\\"1\\"><use xlink:href=\\"#b\\" transform=\\"matrix(.00405 0 0 .01786 -.022 0)\\"/></pattern><image id=\\"b\\" width=\\"258\\" height=\\"56\\" xlink:href=\\"https://cdn.jsdelivr.net/npm/@naturacosmeticos/natds-themes@latest/dist/assets/avon-a-official-embed-image-0.png\\"/></defs></svg>",
          "height": 58,
          "width": 256,
        },
      },
    },
    "font": Object {
      "file": Object {
        "body": Object {
          "bold": "Montserrat-Bold",
          "regular": "Montserrat-Regular",
        },
        "display": "Montserrat-Bold",
        "headline": "Montserrat-SemiBold",
      },
    },
  },
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "buttonSizes": Object {
    "large": Object {
      "height": 48,
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
    },
    "medium": Object {
      "height": 40,
      "paddingBottom": 0,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 0,
    },
    "small": Object {
      "height": 32,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
    },
  },
  "color": Object {
    "alert": "#e74627",
    "background": "#fafafa",
    "highEmphasis": "#333333",
    "highlight": "#000000",
    "link": "#227bbd",
    "lowEmphasis": "#bbbbbb",
    "mediumEmphasis": "#777777",
    "neutral100": "#f1f3f5",
    "neutral200": "#e9ecef",
    "neutral300": "#dee2e6",
    "neutral400": "#ced4da",
    "neutral50": "#f8f9fa",
    "neutral500": "#adb5bd",
    "neutral600": "#868e96",
    "neutral700": "#495057",
    "neutral800": "#343a40",
    "neutral900": "#212529",
    "onAlert": "#ffffff",
    "onBackground": "#333333",
    "onLink": "#ffffff",
    "onPrimary": "#ffffff",
    "onPrimaryDark": "#ffffff",
    "onPrimaryDarkest": "#ffffff",
    "onPrimaryLight": "#000000",
    "onPrimaryLightest": "#000000",
    "onSecondary": "#ffffff",
    "onSecondaryDark": "#ffffff",
    "onSecondaryLight": "#000000",
    "onSuccess": "#ffffff",
    "onSurface": "#333333",
    "onWarning": "#333333",
    "primary": "#7f28c4",
    "primaryDark": "#4b0092",
    "primaryDarkest": "#442184",
    "primaryLight": "#b35bf8",
    "primaryLightest": "#9672D6",
    "secondary": "#e2197c",
    "secondaryDark": "#aa0050",
    "secondaryLight": "#ff5eab",
    "success": "#569a32",
    "surface": "#ffffff",
    "warning": "#fcc433",
  },
  "iconSizes": Object {
    "huge": 144,
    "hugeX": 192,
    "hugeXX": 256,
    "hugex": 192,
    "hugexx": 256,
    "large": 72,
    "largeX": 96,
    "largeXX": 128,
    "largex": 96,
    "largexx": 128,
    "medium": 64,
    "micro": 16,
    "small": 32,
    "standard": 48,
    "tiny": 24,
  },
  "opacity": Object {
    "00": 0,
    "04": 0.04,
    "08": 0.08,
    "12": 0.12,
    "16": 0.16,
    "24": 0.24,
    "32": 0.32,
    "48": 0.48,
    "56": 0.56,
    "64": 0.64,
    "80": 0.8,
    "disabled": 0.32,
    "disabledLow": 0.24,
    "high": 0.64,
    "low": 0.12,
    "lower": 0.04,
    "medium": 0.48,
    "mediumHigh": 0.56,
    "mediumLow": 0.16,
    "opaque": 1,
    "transparent": 0,
    "veryHigh": 0.8,
    "veryLow": 0.08,
  },
  "overrides": Object {
    "MuiAlert": Object {
      "filledInfo": Object {
        "backgroundColor": "#227bbd",
      },
      "filledWarning": Object {
        "backgroundColor": "#fcc433",
        "color": "#333333",
      },
      "icon": Object {
        "marginRight": 8,
      },
      "message": Object {
        "padding": "5px 0",
      },
      "outlinedError": Object {
        "color": "#333333",
      },
      "outlinedInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "borderColor": "#227bbd",
        "color": "#333333",
      },
      "outlinedSuccess": Object {
        "color": "#333333",
      },
      "outlinedWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "borderColor": "#fcc433",
        "color": "#333333",
      },
      "root": Object {
        "fontSize": 16,
        "fontWeight": 400,
        "letterSpacing": 0.51,
        "padding": 16,
        "width": 278,
      },
      "standardError": Object {
        "backgroundColor": "rgba(231, 70, 39, 0.16)",
        "color": "#333333",
      },
      "standardInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227bbd",
        },
        "backgroundColor": "rgba(34, 123, 189, 0.16)",
        "color": "#333333",
      },
      "standardSuccess": Object {
        "backgroundColor": "rgba(86, 154, 50, 0.16)",
        "color": "#333333",
      },
      "standardWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#fcc433",
        },
        "backgroundColor": "rgba(252, 196, 51, 0.16)",
        "color": "#333333",
      },
    },
    "MuiAlertTitle": Object {
      "root": Object {
        "fontSize": 20,
        "fontWeight": 500,
        "letterSpacing": 0.24,
      },
    },
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#333333",
      },
    },
    "MuiBadge": Object {
      "badge": Object {
        "padding": "0 4px",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&.Mui-disabled": Object {
          "backgroundColor": "#00000014",
          "color": "#0000003D",
        },
      },
      "outlined": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
          "color": "#0000003D",
        },
        "borderColor": "#0000003D",
        "padding": null,
      },
      "outlinedPrimary": Object {
        "color": "#333333",
      },
      "outlinedSecondary": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
        "color": "#333333",
      },
      "root": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 40,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
      },
      "sizeLarge": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 48,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
      },
      "sizeSmall": Object {
        "fontSize": 14,
        "fontWeight": 500,
        "height": 32,
        "letterSpacing": 0.11,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      "text": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
          "color": "#0000003D",
        },
        "padding": null,
      },
    },
    "MuiButtonGroup": Object {
      "groupedContainedHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderRightColor": "#0000001F",
        },
      },
      "groupedContainedPrimary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderColor": "#4b0092",
        },
      },
      "groupedContainedSecondary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderColor": "#aa0050",
        },
      },
      "groupedOutlinedHorizontal": Object {
        "&:not(:first-child)": Object {
          "marginLeft": "none",
        },
      },
      "groupedTextHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderRightColor": "#0000001F",
        },
      },
      "groupedTextPrimary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
      },
      "groupedTextSecondary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
      },
    },
    "MuiChip": Object {
      "clickableColorPrimary": Object {
        "&:hover": Object {
          "backgroundColor": "#7f28c4",
        },
      },
      "clickableColorSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "#e2197c",
        },
      },
      "deleteIcon": Object {
        "&:hover": Object {
          "color": "#000000",
        },
        "color": "rgba(0, 0, 0, 0.8)",
        "fontSize": "24px",
        "height": "24px",
        "width": "24px",
      },
      "deleteIconColorPrimary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconColorSecondary": Object {
        "&:hover": Object {
          "color": "#ffffff",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "width": "16px",
      },
      "icon": Object {
        "fontSize": "24px",
      },
      "iconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "marginTop": "1px",
        "width": "16px",
      },
      "outlined": Object {
        "borderColor": "rgba(0, 0, 0, 0.12)",
        "color": "#000000",
      },
      "outlinedPrimary": Object {
        "color": "#000000",
      },
      "outlinedSecondary": Object {
        "color": "#000000",
      },
      "root": Object {
        "& $avatar": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.24)",
          "color": "#333333",
        },
        "&$disabled": Object {
          "opacity": 0.4,
        },
        "backgroundColor": "rgba(0, 0, 0, 0.12)",
        "color": "#333333",
        "fontSize": 14,
      },
    },
    "MuiExpansionPanel": Object {
      "root": Object {
        "&$disabled": Object {
          "backgroundColor": "#ffffff",
          "opacity": 0.32,
        },
        "&$expanded": Object {
          "borderColor": "#7f28c4",
        },
        "border": "transparent 1px solid",
      },
    },
    "MuiExpansionPanelSummary": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 1,
        },
        "alignItems": "flex-start",
        "marginTop": "8px",
      },
    },
    "MuiFormLabel": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#e74627",
        },
        "&.Mui-focused": Object {
          "color": "#777777",
          "fontSize": 14,
        },
        "fontSize": 14,
      },
    },
    "MuiIconButton": Object {
      "root": Object {
        "color": "#333333",
        "padding": "8px",
      },
      "sizeSmall": Object {
        "padding": "4px",
      },
    },
    "MuiInputAdornment": Object {
      "positionEnd": Object {
        "marginRight": 8,
      },
      "root": Object {
        "position": "absolute",
        "right": "0",
      },
    },
    "MuiInputBase": Object {
      "adornedEnd": Object {
        "paddingRight": 48,
      },
      "input": Object {
        "&.Mui-disabled:not(::placeholder)": Object {
          "opacity": 0.24,
        },
        "&.MuiInput-inputTypeSearch": Object {
          "paddingRight": 64,
        },
        "&::placeholder": Object {
          "color": "#777777",
        },
        "border": 0,
        "boxSizing": "border-box",
        "lineHeight": "24px",
        "minHeight": 56,
        "padding": 16,
      },
      "inputMultiline": Object {
        "padding": 16,
      },
      "inputTypeSearch": Object {
        "&::-webkit-search-decoration, &::-webkit-search-cancel-button, &::-webkit-search-results-button, &::-webkit-search-results-decoration": Object {
          "display": "none",
        },
      },
      "root": Object {
        "&.Mui-focused": Object {
          "boxShadow": "#7f28c4 0 0 0 2px",
        },
        "&.MuiFilled:not(.Mui-focused)": Object {
          "&:hover": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#333333 0 0 0 1px",
        },
        "&.MuiInput-underline.Mui-disabled:before": Object {
          "borderBottomStyle": "none",
        },
        "&.MuiInput-underline:after": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:before": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
          "borderBottom": "none",
        },
        "&.MuiInputBase-multiline": Object {
          "padding": 0,
        },
        "&:hover": Object {
          "&.Mui-disabled": Object {
            "boxShadow": "#bbbbbb 0 0 0 1px",
          },
          "boxShadow": "#777777 0 0 0 1px",
        },
        "&[data-state='error']": Object {
          "boxShadow": "#e74627 0 0 0 1px",
        },
        "&[data-state='success']": Object {
          "boxShadow": "#569a32 0 0 0 1px",
        },
        "borderRadius": "4px",
        "boxShadow": "#bbbbbb 0 0 0 1px",
        "color": "#333333",
        "fontSize": 14,
        "width": "100%",
      },
    },
    "MuiInputLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "position": "relative",
        "transform": "none",
      },
      "shrink": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
    },
    "MuiListItem": Object {
      "button": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.04)",
        },
      },
      "gutters": Object {
        "&:focus": Object {
          "outline": "none",
        },
      },
      "root": Object {
        "&$selected": Object {
          "&:focus": Object {
            "outline": "none",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "backgroundColor": "rgba(127, 40, 196, 0.16)",
        },
        "&.Mui-disabled": Object {
          "opacity": 0.32,
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.04)",
        },
        "cursor": "pointer",
      },
    },
    "MuiSelect": Object {
      "icon": Object {
        "color": "#333333",
        "top": 4,
      },
      "select": Object {
        "&.Mui-disabled": Object {
          "color": "#bbbbbb",
        },
        "&:focus": Object {
          "backgroundColor": "transparent",
        },
      },
    },
    "MuiTab": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "textColorInherit": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "wrapper": Object {
        "& > *:first-child": Object {
          "marginBottom": "2px !important",
        },
      },
    },
    "MuiTablePagination": Object {
      "input": Object {
        "flexShrink": "initial",
      },
      "root": Object {
        "& .MuiSelect-icon": Object {
          "height": "100%",
          "top": 0,
        },
        "overflow": "visible",
      },
    },
    "MuiTableSortLabel": Object {
      "icon": Object {
        "marginLeft": 8,
      },
    },
    "MuiTextField": Object {
      "& .MuiInputLabel": Object {
        "marginTop": "20px",
      },
    },
    "MuiToolbar": Object {
      "dense": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "gutters": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
      "regular": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "root": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "active": "rgba(0, 0, 0, 0.56)",
      "disabled": "rgba(0, 0, 0, 0.24)",
    },
    "background": Object {
      "default": "#fafafa",
      "defaultContrastText": "#333333",
      "paper": "#ffffff",
      "paperContrastText": "#333333",
    },
    "complementary": Object {
      "highlight": "#000000",
      "link": "#227bbd",
      "linkContrastText": "#ffffff",
      "warning": "#fcc433",
      "warningContrastText": "#333333",
    },
    "divider": "#bbbbbb",
    "error": Object {
      "contrastText": "#ffffff",
      "main": "#e74627",
    },
    "primary": Object {
      "contrastText": "#ffffff",
      "dark": "#4b0092",
      "light": "#b35bf8",
      "main": "#7f28c4",
    },
    "secondary": Object {
      "contrastText": "#ffffff",
      "dark": "#aa0050",
      "light": "#ff5eab",
      "main": "#e2197c",
    },
    "success": Object {
      "contrastText": "#ffffff",
      "main": "#569a32",
    },
    "text": Object {
      "disabled": "#bbbbbb",
      "hint": "#bbbbbb",
      "primary": "#333333",
      "secondary": "#777777",
    },
  },
  "shadows": Object {
    "0": "none",
    "1": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "12": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "16": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "2": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
    "24": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "3": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "4": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "6": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "8": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "9": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "huge": "0 12px 17px 0 rgba(0, 0, 0, 0.14)",
    "hugeX": "0 16px 24px 0 rgba(0, 0, 0, 0.14)",
    "hugeXX": "0 24px 38px 0 rgba(0, 0, 0, 0.14)",
    "large": "0 6px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeX": "0 8px 10px 0 rgba(0, 0, 0, 0.14)",
    "largeXX": "0 9px 12px 0 rgba(0, 0, 0, 0.14)",
    "medium": "0 4px 5px 0 rgba(0, 0, 0, 0.14)",
    "micro": "0 1px 1px 0 rgba(0, 0, 0, 0.14)",
    "none": "none",
    "small": "0 3px 4px 0 rgba(0, 0, 0, 0.14)",
    "tiny": "0 2px 2px 0 rgba(0, 0, 0, 0.14)",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "sizes": Object {
    "huge": 96,
    "hugeX": 128,
    "hugeXX": 144,
    "hugeXXX": 192,
    "hugex": 128,
    "hugexx": 144,
    "hugexxx": 192,
    "large": 64,
    "largeX": 72,
    "largeXX": 80,
    "largeXXX": 88,
    "largex": 72,
    "largexx": 80,
    "largexxx": 88,
    "medium": 48,
    "mediumX": 56,
    "mediumx": 56,
    "micro": 4,
    "none": 0,
    "semi": 32,
    "semiX": 40,
    "semix": 40,
    "small": 16,
    "standard": 24,
    "tiny": 8,
    "veryHuge": 256,
    "veryhuge": 256,
  },
  "spacing": 8,
  "typography": Object {
    "body": Object {
      "bold": Object {
        "fontFamily": "\\"Suisse Int'l\\", Arial ",
        "fontWeight": 700,
      },
      "regular": Object {
        "fontFamily": "\\"Suisse Int'l\\", Arial ",
        "fontWeight": 400,
      },
    },
    "body1": Object {
      "fontSize": 16,
      "fontWeight": 400,
      "letterSpacing": 0.51,
    },
    "body2": Object {
      "fontSize": 14,
      "fontWeight": 400,
      "letterSpacing": 0.22,
    },
    "button": Object {
      "fallback": Object {
        "fontFamily": "Arial",
        "fontWeight": 400,
      },
      "fontSize": 14,
      "letterSpacing": 1.23,
      "lineHeight": 1.5,
      "primary": Object {
        "fontFamily": "Roboto",
        "fontWeight": 400,
      },
    },
    "caption": Object {
      "fontSize": 12,
      "fontWeight": 400,
      "letterSpacing": 0.38,
    },
    "display": Object {
      "fontFamily": "\\"Zapf Humanist 601\\", Arial ",
      "fontWeight": 400,
    },
    "fontFamily": "\\"Roboto\\", sans-serif",
    "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
    "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
    "fontFamilyBrand3": null,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "fontSize": 96,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h2": Object {
      "fontSize": 60,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h3": Object {
      "fontSize": 48,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h4": Object {
      "fontSize": 34,
      "fontWeight": 400,
      "letterSpacing": 0.27,
    },
    "h5": Object {
      "fontSize": 24,
      "fontWeight": 400,
      "letterSpacing": 0,
    },
    "h6": Object {
      "fontSize": 20,
      "fontWeight": 500,
      "letterSpacing": 0.24,
    },
    "headline": Object {
      "fontFamily": "\\"Suisse Int'l\\", Arial ",
      "fontWeight": 400,
    },
    "overline": Object {
      "fontSize": 12,
      "fontWeight": 500,
      "letterSpacing": 1.92,
    },
    "subtitle1": Object {
      "fontSize": 16,
      "fontWeight": 500,
      "letterSpacing": 0.13,
    },
    "subtitle2": Object {
      "fontSize": 14,
      "fontWeight": 500,
      "letterSpacing": 0.11,
    },
  },
}
`;
